--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
   },
   "extends": [
       "airbnb-base",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint",
+      "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -13,14 +15,13 @@
       "sourceType": "module"
   },
   "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint",
+      "prettier"
   ],
   "rules": {
-    "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": [
-      "error"
-    ],
-     "import/extensions": [
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off",
+    "import/extensions": [
       "error",
       "ignorePackages",
       {
